--- a/other_bills_task/.vscode/settings.json
+++ b/other_bills_task/.vscode/settings.json
@@ -2,6 +2,8 @@
     "cSpell.words": [
         "hoas",
         "phoneno",
-        "smjh"
+        "SATHYANARAYANA",
+        "smjh",
+        "TSTC"
     ]
 }
